# DanskPensionsAnalyse

./: .gitignore  README.md  pyproject.toml
.specify/: constitution.md
specs/001-pensionsanalytiker/: plan.md  spec.md  tasks.md
src/dansk_pensionsanalyse/: __init__.py  models.py  privacy.py
src/dansk_pensionsanalyse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_privacy.py
